# action-discord-release

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  action.yml  package-lock.json  package.json
.github/workflows/: format.yml  release.yml
src/: main.ts
