[package]
name = "action-discord-release"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.1", features = ["derive"] }
tracing = { version = "0.1.44", features = ["async-await"] }
twilight-http = { version = "0.17.1", default-features = false, features = ["rustls-webpki-roots", "decompression"] }
twilight-mention = "0.17.0"
twilight-model = "0.17.1"
twilight-util = { version = "0.17.0", features = ["builder", "link"] }
tokio = { version = "1.52.1", features = ["full"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "serde", "serde_json", "chrono"] }
chrono = { version = "0.4.44", features = ["serde"] }
regex-macro = "0.3.0"
rustls = "0.23.39"
